--- a/XamarinHomework7/Views/HomePage.xaml
+++ b/XamarinHomework7/Views/HomePage.xaml
@@ -43,6 +43,8 @@
                             <StackLayout>
                                 <Label Style="{StaticResource Title}" Text="{Binding Title}"/>
                                 <Label Text="{Binding Description}"/>
+                                <Label Text="{Binding Date, StringFormat='Date: {0:MM dd, yyyy}' }"/>
+                                <Label Text="{Binding Place, StringFormat='Place: {0}'}"/>
                             </StackLayout>
                         </ViewCell>
                     </DataTemplate>
